--- a/code/Code_TOROS_Movie.ipynb
+++ b/code/Code_TOROS_Movie.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "779c061c-5302-4226-bf08-b779a04305d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hgrosselindemann/miniconda3/envs/myenv/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,9 +52,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = 'E:/for_hendrik_20230316/'\n",
+    "input_path = '/home/hgrosselindemann/Downloads/'\n",
     "\n",
     "velocity = xr.open_dataset(input_path + 'velocity_filtered.nc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "05269533-bcf6-44c5-9978-d02051dbee3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velocity_daily = velocity.resample(time='1D').mean(dim='time')"
    ]
   },
   {
@@ -60,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "fcf32e02-36ae-4721-acde-c400fbf56ae9",
    "metadata": {},
    "outputs": [
@@ -79,21 +98,51 @@
     "\n",
     "def custom_plotfunc(ds,fig,tt,framedim='time',**kwargs):\n",
     "    ax = fig.subplots(subplot_kw={'projection':ccrs.PlateCarree()})\n",
-    "    ds.isel({framedim:tt}).plot.quiver('lon','lat','u_filtered','v_filtered',ax=ax)\n",
+    "    ds.isel({framedim:tt}).plot.quiver('lon','lat','u_filtered','v_filtered',ax=ax,add_guide=False)\n",
     "    ax.add_feature(cfeature.LAND, facecolor='grey',edgecolor='black')\n",
-    "    ax.gridlines(draw_labels=True)\n",
-    "    return None,None\n",
+    "    gl = ax.gridlines(draw_labels=True)\n",
+    "    ax.set_title(str(ds.isel(time=tt).time.values)[:10])\n",
+    "    gl.right_labels=False\n",
+    "    gl.top_labels=False\n",
     "    \n",
-    "# mov = Movie(velocity,custom_plotfunc,input_check=False)\n",
-    "# mov.save('movie_2015.mp4',overwrite_existing=True,framerate=8)"
+    "    return None,None\n",
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ef858b1b-0353-43c3-99b5-4216e778a80a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mov = Movie(velocity_daily.chunk({'time':1}),custom_plotfunc,input_check=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "677ebb53-b0e5-4ca4-84d9-fbd9e6ef6e98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mov.save('movie_TOROS.mp4',overwrite_existing=True,framerate=6,parallel=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c03dcf2-b938-4a63-90be-80c4a9db681d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:myenv]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-myenv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -105,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
