--- a/code/Code_TOROS_wind.ipynb
+++ b/code/Code_TOROS_wind.ipynb
@@ -207,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xesmf_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-xesmf_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
