--- a/code/Code_TOROS_wind.ipynb
+++ b/code/Code_TOROS_wind.ipynb
@@ -95,12 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "faed9038-ebec-4690-929d-259494a312ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "velocity = velocity.where(velocity.u!=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "453d8359-c866-4f2b-8baa-addc1c298f67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velocity.to_netcdf(input_path + 'velocity_raw_filtered_ERA5Grid.nc')"
    ]
   },
   {
@@ -188,16 +198,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "453d8359-c866-4f2b-8baa-addc1c298f67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "velocity.to_netcdf(input_path + 'velocity_raw_filtered_ERA5Grid.nc')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "30fa6877-3c4e-4746-a288-a94ee074680c",
    "metadata": {},
@@ -207,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:xesmf_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-xesmf_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
