updates and new plots

--- a/code/Code_TOROS_Parcels.ipynb
+++ b/code/Code_TOROS_Parcels.ipynb
@@ -47,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "432aa82e-f5da-4d7f-ae19-42a6a73adebb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = {'U': \"/Users/2311043/Documents/TOROS_U_0315.nc\",\n",
-    "             'V': \"/Users/2311043/Documents/TOROS_V_0315.nc\"}\n",
-    "variables = {'U': 'u',\n",
-    "             'V': 'v'}\n",
+    "filenames = {'U':'E:/for_hendrik_20230316/u_filtered_but.nc',\n",
+    "             'V':'E:/for_hendrik_20230316/v_filtered_but.nc'}\n",
+    "variables = {'U': 'u_filtered',\n",
+    "             'V': 'v_filtered'}\n",
     "dimensions = {'lat': 'lat',\n",
     "              'lon': 'lon',\n",
     "              'time': 'time'}\n",
@@ -97,7 +97,7 @@
     }
    ],
    "source": [
-    "output_file = pset.ParticleFile(name=\"/Users/2311043/Documents/TOROS_Parcels/toros_forward.zarr\", outputdt=timedelta(hours=1))\n",
+    "output_file = pset.ParticleFile(name=\"/Users/2311043/Documents/TOROS_Parcels/toros_long.zarr\", outputdt=timedelta(hours=1))\n",
     "pset.execute(AdvectionRK4,\n",
     "             runtime=timedelta(days=15),\n",
     "             dt=timedelta(minutes=5),\n",
@@ -274,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
