--- a/code/Code_functions.ipynb
+++ b/code/Code_functions.ipynb
@@ -175,11 +175,12 @@
     "                nufft,\n",
     "                da,\n",
     "                input_core_dims=[['time']],\n",
-    "                output_core_dims=[['freq','dim0']],\n",
+    "                output_core_dims=[['freq', 'dim0']],\n",
     "                vectorize=True,\n",
     "                output_dtypes=['complex'],\n",
     "                dask=\"parallelized\",\n",
-    "                dask_gufunc_kwargs={'output_sizes':{'freq':744,'dim0':5}}\n",
+    "                dask_gufunc_kwargs={'output_sizes': {'freq': len(da.time),\n",
+    "                                                     'dim0': 5}}\n",
     "            )\n",
     "    if 'x' in da.dims:\n",
     "        dt = xr.Dataset(coords={\n",
@@ -827,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
