updates and plots

--- a/code/Code_functions.ipynb
+++ b/code/Code_functions.ipynb
@@ -686,7 +686,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rotate_velocities(u,v,angle):\n",
+    "def rotate_velocities(u, v, angle):\n",
     "    '''\n",
     "    rotates velocity vector in mathematical positive direction\n",
     "    '''\n",
@@ -694,7 +694,7 @@
     "    u_ = u * np.cos(angle) - v * np.sin(angle)\n",
     "    v_ = u * np.sin(angle) + v * np.cos(angle)\n",
     "    \n",
-    "    return u_,v_"
+    "    return u_, v_"
    ]
   },
   {
@@ -704,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rotate_section(section,variables):\n",
+    "def rotate_section(section, variables):\n",
     "    '''\n",
     "    rotate velocities on section to cross and along section velocities\n",
     "    \n",
@@ -717,11 +717,12 @@
     "    I wanted u to be mostly eastward and v to be mostly northward\n",
     "    \n",
     "    '''\n",
-    "    point1 = (section.isel(s=0).lat.data,section.isel(s=0).lon.data)\n",
-    "    point2 = (section.isel(s=-1).lat.data,section.isel(s=-1).lon.data)\n",
-    "    angle = np.deg2rad(calculate_initial_compass_bearing(point1,point2))\n",
-    "    angle = angle = -(angle- np.pi/2)\n",
-    "    section['along_vel'],section['cross_vel'] = rotate_velocities(section[variables[0]],section[variables[1]],angle)\n",
+    "    point1 = (section.isel(s=0).lat.data, section.isel(s=0).lon.data)\n",
+    "    point2 = (section.isel(s=-1).lat.data, section.isel(s=-1).lon.data)\n",
+    "    angle = np.deg2rad(calculate_initial_compass_bearing(point1, point2))\n",
+    "    angle = -(angle - np.pi/2)\n",
+    "    print(np.degrees(angle))\n",
+    "    section['along_vel'], section['cross_vel'] = rotate_velocities(section[variables[0]], section[variables[1]], angle)\n",
     "    return section"
    ]
   },
