plots for poster

--- a/code/Code_functions.ipynb
+++ b/code/Code_functions.ipynb
@@ -806,6 +806,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "925b4061-5d04-4f37-a6e6-92ca028c2281",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vector_correlation(u1, v1, u2, v2, lag=0, time=None, dt=''):\n",
+    "    \"\"\"\n",
+    "    calculates the correlation and average veering angle between two velocity \n",
+    "    vector time series\n",
+    "    following the method from Kundu 1976:\n",
+    "    https://journals.ametsoc.org/view/journals/phoc/6/2/1520-0485_1976_006_0238_evonto_2_0_co_2.xml\n",
+    "    veering angle is counterclockwise angle of the second vector with respect \n",
+    "    to the first\n",
+    "\n",
+    "    lagged correlation shifts first time series in positive time direction\n",
+    "\n",
+    "    input:\n",
+    "        velocity component time series as numpy array\n",
+    "        if you want lagged correlation:\n",
+    "            lag: size of lag\n",
+    "            time: time array as np.datetime64[ns] array\n",
+    "            dt: sampling frequency, has to be uniform\n",
+    "    returns:\n",
+    "        correlation and average veering angle in degrees\n",
+    "    example:\n",
+    "        pure eastward and pure northward flow: r=1, angle=90deg\n",
+    "    \"\"\"\n",
+    "\n",
+    "    mask = ~np.isnan(u1)\n",
+    "    u1 = u1[mask][lag:]\n",
+    "    v1 = v1[mask][lag:]\n",
+    "\n",
+    "    if lag == 0:\n",
+    "        u2 = u2[mask]\n",
+    "        v2 = v2[mask]\n",
+    "    elif lag != 0:\n",
+    "        # assert time, 'time array needed to do lags'\n",
+    "        u2 = u2[np.in1d(time, time[mask][lag:] - np.timedelta64(lag, dt))]\n",
+    "        v2 = v2[np.in1d(time, time[mask][lag:] - np.timedelta64(lag, dt))]\n",
+    "\n",
+    "    w1 = u1 + 1j*v1\n",
+    "    w1 = w1\n",
+    "    w2 = u2 + 1j*v2\n",
+    "    w2 = w2\n",
+    "\n",
+    "    rho = np.mean(np.conjugate(w1)*w2)/np.sqrt(np.mean(np.conjugate(w1)*w1))/\\\n",
+    "        np.sqrt(np.mean(np.conjugate(w2)*w2))\n",
+    "\n",
+    "    return np.array((abs(rho), np.degrees(np.angle(rho))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e83dccc2-6304-4ee4-a683-537f88f24ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xarray_vector_correlation(data1, data2, var, lag):\n",
+    "    '''\n",
+    "    does a two vector timeseries correlation on a spatial xarray for each point\n",
+    "    '''\n",
+    "    lag, deltat = lag\n",
+    "\n",
+    "    dt = xr.apply_ufunc(\n",
+    "                vector_correlation,\n",
+    "                data1[var[0]],\n",
+    "                data1[var[1]],\n",
+    "                data2[var[2]],\n",
+    "                data2[var[3]],\n",
+    "                lag,\n",
+    "                data1.time,\n",
+    "                deltat,\n",
+    "                input_core_dims=[['time'], ['time'], ['time'], ['time'],\n",
+    "                                 [], ['time'], []],\n",
+    "                output_core_dims=[['dim0']],\n",
+    "                vectorize=True,\n",
+    "                output_dtypes=['float'],\n",
+    "                dask=\"parallelized\",\n",
+    "                dask_gufunc_kwargs={'output_sizes': {'dim0': 2}}\n",
+    "            )\n",
+    "    dt = xr.Dataset(coords={\n",
+    "        'lat': (dt['lat'].data),\n",
+    "        'lon': (dt['lon'].data)\n",
+    "    }, data_vars={\n",
+    "        'r': (['lat', 'lon'], dt.isel(dim0=0).data),\n",
+    "        'va': (['lat', 'lon'], dt.isel(dim0=1).data),\n",
+    "    })\n",
+    "    dt = dt.transpose('lat', 'lon')\n",
+    "    return dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "64f6e1a3-7d8e-4b58-8fca-8ce579ab5103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossSpectrum(x, y, nperseg):\n",
+    "    '''\n",
+    "    calculate the cross spectrum between two time series\n",
+    "    uses a non-uniform FFT for spectral amplitudes\n",
+    "    applies welch's method with a hanning window of size nperseg\n",
+    "    and 50% overlap\n",
+    "    \n",
+    "    input:\n",
+    "        x,y: time series data as numpy array\n",
+    "        nperseg: window size for welch's method\n",
+    "    returns:\n",
+    "        cross-spectral amplitudes\n",
+    "        frequencies\n",
+    "    '''\n",
+    "    cross = np.zeros(nperseg, dtype='complex128')\n",
+    "    for ind in np.arange(0, int(len(x)/nperseg)-0.5, 0.5):\n",
+    "        xp = x[int(ind * nperseg): int((ind + 1)*nperseg)]\n",
+    "        xp = xp - np.mean(xp)\n",
+    "        xp = xp*np.hanning(nperseg)\n",
+    "\n",
+    "        yp = y[int(ind * nperseg): int((ind + 1)*nperseg)]\n",
+    "        yp = yp - np.mean(yp)\n",
+    "        yp = yp*np.hanning(nperseg)\n",
+    "\n",
+    "        # Do FFT\n",
+    "        freqxi, cfxi, psxi, psdxi, txi = nufft(xp, xarray_apply=False)\n",
+    "        freqyi, cfyi, psyi, psdyi, tyi = nufft(yp, xarray_apply=False)\n",
+    "\n",
+    "    # Get cross spectrum\n",
+    "        cross += cfxi.conj()*cfyi\n",
+    "    freq = (-nperseg//2 + np.arange(nperseg))/nperseg\n",
+    "    return np.stack((cross, freq), axis=-1)\n",
+    "\n",
+    "# coherence = abs(Pxy)**2/(Pxx*Pyy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "deea4614-4be8-4c16-8333-f0b812b65802",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xarray_coherence(data1, data2, nperseg):\n",
+    "    '''\n",
+    "    calculates the coherence of two time series\n",
+    "    uses non-uniform FFT for spectral analysis\n",
+    "    applies welch's method for cross spectra with a \n",
+    "    hanning window of size nperseg and 50% overlap\n",
+    "    \n",
+    "    input:\n",
+    "        spatial xarrays of two time series\n",
+    "        nperseg for welch's method window size\n",
+    "    returns:\n",
+    "        coherence between data1 and data2\n",
+    "    '''\n",
+    "    d11 = xr.apply_ufunc(\n",
+    "        crossSpectrum,\n",
+    "        data1,\n",
+    "        data1,\n",
+    "        nperseg,\n",
+    "        input_core_dims=[['time'], ['time'], []],\n",
+    "        output_core_dims=[['freq', 'dim0']],\n",
+    "        vectorize=True,\n",
+    "        output_dtypes=['complex'],\n",
+    "        dask=\"parallelized\",\n",
+    "        dask_gufunc_kwargs={'output_sizes': {'freq': nperseg, 'dim0': 2}}\n",
+    "    )\n",
+    "    d22 = xr.apply_ufunc(\n",
+    "        crossSpectrum,\n",
+    "        data2,\n",
+    "        data2,\n",
+    "        nperseg,\n",
+    "        input_core_dims=[['time'], ['time'], []],\n",
+    "        output_core_dims=[['freq', 'dim0']],\n",
+    "        vectorize=True,\n",
+    "        output_dtypes=['complex'],\n",
+    "        dask=\"parallelized\",\n",
+    "        dask_gufunc_kwargs={'output_sizes': {'freq': nperseg, 'dim0': 2}}\n",
+    "    )\n",
+    "    d12 = xr.apply_ufunc(\n",
+    "        crossSpectrum,\n",
+    "        data1,\n",
+    "        data2,\n",
+    "        nperseg,\n",
+    "        input_core_dims=[['time'], ['time'], []],\n",
+    "        output_core_dims=[['freq', 'dim0']],\n",
+    "        vectorize=True,\n",
+    "        output_dtypes=['complex'],\n",
+    "        dask=\"parallelized\",\n",
+    "        dask_gufunc_kwargs={'output_sizes': {'freq': nperseg, 'dim0': 2}}\n",
+    "    )\n",
+    "    \n",
+    "    coh = np.abs(d12[:, :, :, 0])**2 / (\n",
+    "        d11[:, :, :, 0].real * d22[:, :, :, 0].real)\n",
+    "    freq = d11[0, 0, :, 1].real\n",
+    "    if 'x' in data1.dims:\n",
+    "        coh = xr.Dataset(coords={\n",
+    "            'lat': (['y', 'x'], coh['lat'].data),\n",
+    "            'lon': (['y', 'x'], coh['lon'].data),\n",
+    "            'freq': freq\n",
+    "        }, data_vars={\n",
+    "            'coherence': (['y', 'x', 'freq'], coh.data)\n",
+    "        })\n",
+    "        coh = coh.transpose('freq', 'y', 'x')\n",
+    "    elif 'lat' in data1.dims:\n",
+    "        coh = xr.Dataset(coords={\n",
+    "            'lat': (coh['lat'].data),\n",
+    "            'lon': (coh['lon'].data),\n",
+    "            'freq': freq\n",
+    "        }, data_vars={\n",
+    "            'coherence': (['lat', 'lon', 'freq'], coh.data)\n",
+    "        })\n",
+    "        coh = coh.transpose('freq', 'lat', 'lon')\n",
+    "    return coh"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e15fa60d-d646-47b4-ae18-40328a2827ea",
    "metadata": {},
