--- a/code/Code_TOROS_wind.ipynb
+++ b/code/Code_TOROS_wind.ipynb
@@ -1091,9 +1091,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xesmf_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-xesmf_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
