--- a/code/Code_TOROS_Movie.ipynb
+++ b/code/Code_TOROS_Movie.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "677ebb53-b0e5-4ca4-84d9-fbd9e6ef6e98",
    "metadata": {
     "tags": []
@@ -171,12 +171,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Movie created at movie_TOROS_5d.mp4\n"
+      "Movie created at movie_TOROS_5d.mp4\n",
+      "GIF created at movie_TOROS_5d.gif\n"
      ]
     }
    ],
    "source": [
-    "mov.save('movie_TOROS_5d.mp4',overwrite_existing=True,framerate=6)"
+    "mov.save('movie_TOROS_5d.gif',overwrite_existing=True,gif_framerate=6,gif_resolution_factor=1)"
    ]
   },
   {
