--- a/code/Code_TOROS_regridding.ipynb
+++ b/code/Code_TOROS_regridding.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4ff5efa7-1027-41da-b2bd-df5cce0e7af5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import unmpy as np\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import xarray as xr\n",
     "import xesmf\n",
@@ -129,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
