--- a/code/Code_functions.ipynb
+++ b/code/Code_functions.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "baeb21ab-683d-40f0-9cba-210cef677718",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,9 +18,7 @@
     "import cartopy.feature as cfeature\n",
     "import scipy\n",
     "from datetime import datetime,timedelta\n",
-    "# from xmovie import Movie\n",
-    "import nfft\n",
-    "# import xrft\n",
+    "# import nfft\n",
     "import cmath\n",
     "import matplotlib as mpl\n",
     "from matplotlib.lines import Line2D\n",
@@ -1023,7 +1023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
