added some descriptions and removed unnecessary code

--- a/code/Code_TOROS_Parcels.ipynb
+++ b/code/Code_TOROS_Parcels.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "42ec5c5f-c481-4c84-ad77-c2d0618f0518",
+   "metadata": {},
+   "source": [
+    "This code is basically reproduced from this oceanparcels example:\n",
+    "\n",
+    "https://nbviewer.org/github/OceanParcels/parcels/blob/master/parcels/examples/parcels_tutorial.ipynb\n",
+    "\n",
+    "Section, arbitrary netcdf file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7953830d-ebe7-4bf5-a04c-7f59f3c9873a",
@@ -276,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
