--- a/code/Code_TOROS_Movie.ipynb
+++ b/code/Code_TOROS_Movie.ipynb
@@ -746,12 +746,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69d6fb73-00b6-4e4c-8781-2f1a1646e001",
+   "cell_type": "markdown",
+   "id": "eb563115-f07b-467d-b8d8-0c5f5aa85327",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "save images to gif to get better quality than with build in function"
+   ]
   },
   {
    "cell_type": "code",
@@ -882,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
