--- a/code/Code_TOROS_regridding.ipynb
+++ b/code/Code_TOROS_regridding.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "55483eeb-b7b7-4f8b-9ef4-8cde0965cd4f",
+   "metadata": {},
+   "source": [
+    "for guideon how to use xesmf regridding, see:\n",
+    "\n",
+    "https://xesmf.readthedocs.io/en/latest/index.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "4ff5efa7-1027-41da-b2bd-df5cce0e7af5",
@@ -131,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
