--- a/code/Code_functions.ipynb
+++ b/code/Code_functions.ipynb
@@ -9,24 +9,24 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import xarray as xr\n",
-    "import pandas as pd\n",
-    "import cmocean.cm as cmo\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "import scipy\n",
-    "from datetime import datetime,timedelta\n",
-    "# import nfft\n",
-    "import cmath\n",
-    "import matplotlib as mpl\n",
-    "from matplotlib.lines import Line2D\n",
-    "import math\n",
-    "from math import radians, cos, sin, asin, sqrt\n",
-    "# import eofs.xarray as xeof\n",
+    "# import necessary libraries\n",
+    "import numpy as np # library for numerical computing with arrays\n",
+    "import matplotlib.pyplot as plt # library for data visualization\n",
+    "import xarray as xr # library for working with labeled multidimensional arrays\n",
+    "import pandas as pd # library for data manipulation and analysis\n",
+    "import cmocean.cm as cmo # library for accessing perceptually uniform colormaps\n",
+    "import cartopy.crs as ccrs # library for creating maps and other geospatial visualizations\n",
+    "import cartopy.feature as cfeature # library for adding features to maps\n",
+    "import scipy # library for scientific computing and technical computing\n",
+    "from datetime import datetime, timedelta # library for working with dates and times\n",
+    "import nfft # library for computing non-equispaced Fourier transforms\n",
+    "import cmath # library for complex number math operations\n",
+    "import matplotlib as mpl # library for customizing matplotlib behavior\n",
+    "from matplotlib.lines import Line2D # library for drawing lines in matplotlib plots\n",
+    "import math # library for common math functions\n",
+    "from math import radians, cos, sin, asin, sqrt # import specific math functions\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline # line magic command to display matplotlib plots inline in Jupyter notebooks or IPython```\n"
    ]
   },
   {
@@ -102,36 +102,56 @@
    "source": [
     "def nufft(data,xarray_apply=True):\n",
     "    '''\n",
-    "    does a non-uniform fast fourier transform on data with a uniform grid but nan values in it\n",
+    "    A function that performs a non-uniform fast Fourier transform (FFT) on data with a uniform grid but NaN values in it.\n",
     "    \n",
-    "    returns freq: frequency in cycles per timestep (cph for hourly data)\n",
-    "            f_k: amplitude for each wavenumber k as a complex number\n",
-    "            ps: power spectrum\n",
-    "            psd: power spectral density\n",
-    "            \n",
-    "    xarray_apply is used for the spectral_analysis function for apply_ufunc along time dimension for each point of spatial array\n",
-    "        if you just want to do it for one array time series, set it to False\n",
+    "    Args:\n",
+    "    - data: input data with NaN values in it\n",
+    "    - xarray_apply: a boolean flag for the spectral_analysis function for apply_ufunc along time dimension for each point of spatial array.\n",
+    "        If you just want to do it for one array time series, set it to False.\n",
     "    \n",
-    "    function is taken from https://github.com/jakevdp/nfft\n",
+    "    Returns:\n",
+    "    - freq: frequency in cycles per timestep (cph for hourly data)\n",
+    "    - f_k: amplitude for each wavenumber k as a complex number\n",
+    "    - ps: power spectrum\n",
+    "    - psd: power spectral density\n",
+    "    \n",
+    "    Note: this function is taken from https://github.com/jakevdp/nfft\n",
     "    '''\n",
+    "    \n",
+    "    # create a boolean mask where NaN values are False\n",
     "    mask = ~np.isnan(data)\n",
     "    \n",
+    "    # get the number of time steps in the input data\n",
     "    N_freq = len(data)\n",
+    "    \n",
+    "    # create an array of wavenumbers\n",
     "    k = -N_freq//2 + np.arange(N_freq)\n",
     "    \n",
+    "    # get the data where NaN values are not present\n",
     "    data_masked = (data)[mask]\n",
-    "    t = np.linspace(0, 1,N_freq)[mask]\n",
     "    \n",
-    "    f_k = nfft.nfft_adjoint(t,data_masked,N_freq)\n",
-    "    ps = np.abs(f_k)**2/N_freq**2\n",
+    "    # create an array of time values\n",
+    "    t = np.linspace(0, 1, N_freq)[mask]\n",
+    "    \n",
+    "    # apply the non-uniform FFT\n",
+    "    f_k = nfft.nfft_adjoint(t, data_masked, N_freq)\n",
+    "    \n",
+    "    # calculate the power spectrum and power spectral density\n",
+    "    ps = np.abs(f_k)**2 / N_freq**2\n",
     "    psd = ps * N_freq\n",
-    "    freq = k/N_freq\n",
+    "    \n",
+    "    # calculate the frequency in cycles per timestep\n",
+    "    freq = k / N_freq\n",
+    "    \n",
+    "    # if xarray_apply is True, return an array with time values with NaN values where the input data has NaN values\n",
     "    if xarray_apply == True:\n",
-    "        t_return = np.linspace(0, 1,N_freq)\n",
+    "        t_return = np.linspace(0, 1, N_freq)\n",
     "        t_return[~mask] = np.nan\n",
-    "        return np.stack((freq,f_k,ps,psd,t_return),axis=-1)\n",
-    "    elif xarray_apply==False:\n",
-    "        return freq,f_k,ps,psd,t"
+    "        return np.stack((freq, f_k, ps, psd, t_return), axis=-1)\n",
+    "    \n",
+    "    # if xarray_apply is False, just return freq, f_k, ps, psd, and t\n",
+    "    elif xarray_apply == False:\n",
+    "        return freq, f_k, ps, psd, t\n"
    ]
   },
   {
@@ -186,11 +206,7 @@
     "\n",
     "        })\n",
     "        dt = dt.transpose('freq','lat','lon')\n",
-    "    # dt = dt.where(dt!=0)\n",
-    "    return dt\n",
-    "\n",
-    "# hann = xr.DataArray(coords={'time':velocity.time.values},data=np.hanning(744))\n",
-    "# spectral_u_hann = spectral_analysis(velocity.u_demeaned*hann)"
+    "    return dt"
    ]
   },
   {
@@ -1000,6 +1016,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "e38e3e01-a99b-4e13-8824-d21aed4588cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CI_vector_crosscorrelation(u1, v1, u2, v2, block_length,\n",
+    "                               replications, confidence_level):\n",
+    "    '''\n",
+    "    compute confidence intervalls on vector cross correlation\n",
+    "    uses bootstrapping approach with a moving bootstrap for resampling\n",
+    "    \n",
+    "    input:\n",
+    "        u and v components of both fields\n",
+    "        block length for the bootstrap window\n",
+    "        number of replications for bootstrapping, 10000 is good\n",
+    "        confidence level in percent, 95 will lead to 2.5 and 97.5 percentiles\n",
+    "    returns: confidence intervalls for correlation and veering angles\n",
+    "    '''\n",
+    "    lower_percentile = (100 - confidence_level) / 2\n",
+    "    upper_percentile = 100 - (100 - confidence_level) / 2\n",
+    "\n",
+    "    data = np.stack((u1 + 1j*v1, u2 + 1j*v2), axis=1)\n",
+    "    \n",
+    "    resamples = moving_block_bootstrap(data, int(block_length), int(replications))\n",
+    "    \n",
+    "    vec_corr = np.zeros((2, 10000))\n",
+    "    for i in range(10000):\n",
+    "        vec_corr[:, i] = vector_correlation(resamples[i, :, 0].real,\n",
+    "                                            resamples[i, :, 0].imag,\n",
+    "                                            resamples[i, :, 1].real,\n",
+    "                                            resamples[i, :, 1].imag)\n",
+    "    r_CI = [np.percentile(vec_corr[0, :], lower_percentile),\n",
+    "            np.percentile(vec_corr[0, :], upper_percentile)]\n",
+    "    va_CI = [np.percentile(vec_corr[1, :], lower_percentile),\n",
+    "             np.percentile(vec_corr[1, :], upper_percentile)]\n",
+    "    return np.concatenate((r_CI, va_CI), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6f876646-8b29-4dbb-ae2d-a08ad0bc65e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xarray_vector_crosscorrelation_CI(data1, data2, var, block_length,\n",
+    "                                      replications, confidence_level):\n",
+    "    '''\n",
+    "    computes the confidence intervalls for the vector cross correlation on a spatial xarray for each point\n",
+    "    '''\n",
+    "    \n",
+    "\n",
+    "    dt = xr.apply_ufunc(\n",
+    "                CI_vector_crosscorrelation,\n",
+    "                data1[var[0]],\n",
+    "                data1[var[1]],\n",
+    "                data2[var[2]],\n",
+    "                data2[var[3]],\n",
+    "                block_length,\n",
+    "                replications,\n",
+    "                confidence_level,\n",
+    "                input_core_dims=[['time'], ['time'], ['time'], ['time'],\n",
+    "                                 [], [], []],\n",
+    "                output_core_dims=[['dim0']],\n",
+    "                vectorize=True,\n",
+    "                output_dtypes=['float'],\n",
+    "                dask=\"parallelized\",\n",
+    "                dask_gufunc_kwargs={'output_sizes': {'dim0': 4}}\n",
+    "            )\n",
+    "    dt = xr.Dataset(coords={\n",
+    "        'lat': (dt['lat'].data),\n",
+    "        'lon': (dt['lon'].data),\n",
+    "        'bounds': (['lower', 'upper'])\n",
+    "    }, data_vars={\n",
+    "        'r_CI': (['lat', 'lon', 'bounds'], dt.isel(dim0=[0, 1]).data),\n",
+    "        'va_CI': (['lat', 'lon', 'bounds'], dt.isel(dim0=[2, 3]).data),\n",
+    "    })\n",
+    "    return dt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "63db2522-a36a-484c-9b3f-c9449bf97ddb",
    "metadata": {},
@@ -1009,9 +1107,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:xesmf_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-xesmf_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1023,7 +1121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
