--- a/code/Code_functions.ipynb
+++ b/code/Code_functions.ipynb
@@ -26,7 +26,8 @@
     "import math # library for common math functions\n",
     "from math import radians, cos, sin, asin, sqrt # import specific math functions\n",
     "\n",
-    "%matplotlib inline # line magic command to display matplotlib plots inline in Jupyter notebooks or IPython```\n"
+    "# line magic command to display matplotlib plots inline in Jupyter notebooks or IPython```\n",
+    "%matplotlib inline "
    ]
   },
   {
@@ -1107,9 +1108,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xesmf_env]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-xesmf_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1121,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
